--- a/index.html
+++ b/index.html
@@ -6,86 +6,144 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #6a5acd, #2f2f4f);
-            color: white;
-            text-align: center;
+            font-family: 'Segoe UI', Tahoma, sans-serif;
+            background: linear-gradient(135deg, #ff512f, #f09819);
+            color: #fff;
         }
+
         header {
-            padding: 50px 20px;
+            padding: 80px 20px;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.35);
         }
+
         h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
+            font-size: 4em;
+            margin: 0;
+            letter-spacing: 3px;
         }
+
+        .subtitle {
+            font-size: 1.5em;
+            margin-top: 10px;
+            opacity: 0.9;
+        }
+
         .ip-box {
-            background: rgba(0,0,0,0.3);
+            margin-top: 30px;
             display: inline-block;
-            padding: 15px 25px;
-            border-radius: 10px;
-            font-size: 1.2em;
-            margin-top: 20px;
+            background: rgba(0,0,0,0.5);
+            padding: 20px 40px;
+            border-radius: 15px;
+            font-size: 1.5em;
+            box-shadow: 0 0 25px rgba(0,0,0,0.4);
         }
-        section {
-            padding: 40px 20px;
+
+        main {
+            padding: 60px 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+            max-width: 1100px;
+            margin: auto;
         }
-        .card {
-            background: rgba(0,0,0,0.25);
-            margin: 15px auto;
-            max-width: 600px;
+
+        .section {
+            background: rgba(0,0,0,0.35);
+            border-radius: 18px;
+            padding: 35px;
+            box-shadow: 0 0 30px rgba(0,0,0,0.35);
+        }
+
+        .section h2 {
+            font-size: 2.2em;
+            margin-bottom: 15px;
+            color: #ffd27f;
+        }
+
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 20px;
+        }
+
+        .feature-box {
+            background: rgba(255,255,255,0.08);
             padding: 20px;
             border-radius: 12px;
+            font-size: 1.2em;
+            text-align: center;
+            transition: transform 0.2s ease, background 0.2s ease;
         }
+
+        .feature-box:hover {
+            transform: scale(1.05);
+            background: rgba(255,255,255,0.15);
+        }
+
         footer {
-            padding: 20px;
-            background: rgba(0,0,0,0.4);
-            font-size: 0.9em;
+            text-align: center;
+            padding: 30px;
+            background: rgba(0,0,0,0.5);
+            font-size: 1em;
         }
+
         a {
-            color: #c9bfff;
+            color: #ffe29f;
             text-decoration: none;
+            font-weight: bold;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>🎮 MauviSMP</h1>
-    <p>Der entspannte Survival Multiplayer Server</p>
+    <h1>MauviSMP</h1>
+    <div class="subtitle">Dein Survival. Deine Welt. Dein Server.</div>
     <div class="ip-box">
-        📌 IP: <b>mauvismp.de</b>
+        🎮 IP: <b>mauvismp.de</b>
     </div>
 </header>
 
-<section>
-    <div class="card">
-        <h2>🌍 Über MauviSMP</h2>
-        <p>
-            MauviSMP ist ein Community-basierter Survival Server mit Fokus auf Spaß, Fairplay und kreatives Bauen.
+<main>
+
+    <div class="section">
+        <h2>🔥 Über MauviSMP</h2>
+        <p style="font-size: 1.2em;">
+            MauviSMP ist ein moderner Minecraft Survival Multiplayer Server mit Fokus auf Community,
+            fairen Spielspaß und epische Bauprojekte. Kein Pay2Win, kein Stress – nur echtes SMP-Feeling.
         </p>
     </div>
 
-    <div class="card">
-        <h2>⚔️ Features</h2>
-        <ul style="list-style: none; padding: 0;">
-            <li>✔️ Survival SMP</li>
-            <li>✔️ Aktive Community</li>
-            <li>✔️ Events & Projekte</li>
-            <li>✔️ Kein Pay2Win</li>
-        </ul>
+    <div class="section">
+        <h2>⚔️ Unsere Features</h2>
+        <div class="features">
+            <div class="feature-box">✔️ Reines Survival SMP</div>
+            <div class="feature-box">✔️ Aktive Community</div>
+            <div class="feature-box">✔️ Regelmäßige Events</div>
+            <div class="feature-box">✔️ Kein Pay2Win</div>
+            <div class="feature-box">✔️ Citybuild & Farmwelten</div>
+            <div class="feature-box">✔️ Freundliches Team</div>
+        </div>
     </div>
 
-    <div class="card">
-        <h2>💬 Join uns</h2>
-        <p>
-            Tritt unserem Discord bei:<br>
-            <a href="#">discord.gg/mauvismp</a>
+    <div class="section">
+        <h2>💬 Werde Teil von MauviSMP</h2>
+        <p style="font-size: 1.2em;">
+            Tritt unserem Discord bei und verpasse keine News, Events oder Updates!  
+            <br><br>
+            👉 <a href="#">discord.gg/mauvismp</a>
         </p>
     </div>
-</section>
+
+</main>
 
 <footer>
-    © 2026 MauviSMP | Nicht offiziell mit Mojang verbunden
+    © 2026 MauviSMP | Nicht offiziell mit Mojang oder Microsoft verbunden
 </footer>
 
 </body>
