--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
         <div class="features">
             <div class="feature-box">✔️ Reines Survival SMP</div>
             <div class="feature-box">✔️ Aktive Community</div>
-            <div class="feature-box">✔️ Regelmäßige Events</div>
+            <div class="feature-box">✔️ KeinGlücksSpiel</div>
             <div class="feature-box">✔️ Kein Pay2Win</div>
-            <div class="feature-box">✔️ Citybuild & Farmwelten</div>
+            <div class="feature-box">✔️ KeinPVP</div>
             <div class="feature-box">✔️ Freundliches Team</div>
         </div>
     </div>
@@ -136,7 +136,7 @@
         <p style="font-size: 1.2em;">
             Tritt unserem Discord bei und verpasse keine News, Events oder Updates!  
             <br><br>
-            👉 <a href="#">discord.gg/mauvismp</a>
+            👉 <a href="#">discord.gg/arBCwWJV6s</a>
         </p>
     </div>
 
