--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <h1>MauviSMP</h1>
     <div class="subtitle">Dein Survival. Deine Welt. Dein Server.</div>
     <div class="ip-box">
-        🎮 IP: <b>mauvismp.de</b>
+        🎮 IP: <b>mauvi.de</b>
     </div>
 </header>
 
