--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <header>
   <div class="hero">
     <!-- Hier dein Bild einfügen -->
-    <img src="logo.jpg" alt="DemonCoreSMP Logo" class="hero-logo">
+    <img src="AOI_d_-Ko8k8qVAdwlgEFJAeigqUbnRRK71o4MkcAH6sC5t-pcvnIVdV3DP1sTcnN6k64MGJ1Pbdo5cpzxidV-15tjAFli3-mg7jPcGgV43HqoQblsQz6lmGMalM6-Ll94gLJ-z_bDBQ2XJOvtCcw2DrDzQpB6OjiIppOrmeqqL6ecWuAx4sEws1024-rj.png" alt="DemonCoreSMP Logo" class="hero-logo">
 
     <h1>DEMONCORE SMP</h1>
     <p class="subtitle">
