--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </p>
 
     <div class="ip-box">
-      IP: <b>DemonCore.mine-hoster.net</b>
+      IP: <b>DemonCore.de</b>
     </div>
 
     <a class="btn" href="#">Jetzt beitreten</a>
